# libhid

./: CMakeLists.txt  main.cpp
cmake/: gtest.cmake
include/libhid/: HIDDevice.h  HIDManager.h  HIDReport.h  HidDevice.h  HidManager.h  HidReport.h  libhid.h
src/: G29.cpp  G29.h  HIDDevice.cpp  HIDReport.cpp  HidDevice.cpp  HidDevice.h  HidDeviceFilter.cpp  HidDeviceFilter.h  HidManager.h  HidReport.cpp  HidReport.h  ThreadSafeQueue.h
src/mac/: CFVector.h  HIDDeviceMac.cpp  HIDDeviceMac.h  HIDManager.cpp  HidDeviceMac.cpp  HidDeviceMac.h  SharedCFRunLoop.cpp  SharedCFRunLoop.h  SharedCFTypeRef.h
test2/: CFSharedPointer.cpp  CFSharedPointer.hpp  CFVector.cpp  CFVector.h  HIDDevice.cpp  HIDDevice.h  HIDManager.cpp  HIDManager.h  HIDReport.cpp  HIDReport.hpp  HIDReportDescriptor.cpp  HIDReportDescriptor.h  HIDUsage.cpp  HIDUsage.h  LogitechForceSteeringWheel.cpp  LogitechForceSteeringWheel.h  ThreadSafeQueue.cpp  ThreadSafeQueue.hpp  g29-report-descriptor.txt  main.cpp  utils.cpp  utils.h
test2.xcodeproj/: project.pbxproj
test2.xcodeproj/project.xcworkspace/xcuserdata/ltian.xcuserdatad/: UserInterfaceState.xcuserstate
test2.xcodeproj/xcuserdata/ltian.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
test2/hid/: HIDDevice.cpp  HIDDevice.h
tests/: CMakeLists.txt  HIDDeviceTest.cpp  HIDManagerTest.cpp  main.cpp
tests/mac/: SharedCFRunLoopTest.cpp
tests/src/: G29Test.cpp  HIDDeviceTest.cpp  HIDManagerTest.cpp  ThreadSafeQueueTest.cpp
tests/src/mac/: SharedCFTypeRefTest.cpp
