include(../cmake/gtest.cmake)

add_executable(
    SharedCFTypeRefTest
    src/mac/SharedCFTypeRefTest.cpp
)
target_link_libraries(
    SharedCFTypeRefTest
    libhid
    gtest_main
)
gtest_discover_tests(
    SharedCFTypeRefTest
)

add_executable(
    HIDManagerTest
    src/HIDManagerTest.cpp
)
target_link_libraries(
    HIDManagerTest
    libhid
    gtest_main
)
gtest_discover_tests(
    HIDManagerTest
)

add_executable(
    HidDeviceTest
    src/HidDeviceTest.cpp
)
target_link_libraries(
    HidDeviceTest
    libhid
    gtest_main
)
gtest_discover_tests(
    HidDeviceTest
)

add_executable(
    ThreadSafeQueueTest
    src/ThreadSafeQueueTest.cpp
)
target_link_libraries(
    ThreadSafeQueueTest
    libhid
    gtest_main
)
gtest_discover_tests(
    ThreadSafeQueueTest
)
